# kyle-zk

./: .gitignore  README.md  package.json
age-verification-zk/: README.md
age-verification-zk/cairo/: Scarb.toml
age-verification-zk/cairo/scripts/: build.sh  prove.sh  test.sh
age-verification-zk/cairo/src/: lib.cairo
age-verification-zk/noir/: Nargo.toml  Prover.toml
age-verification-zk/noir/scripts/: build.sh  prove.sh  test.sh
age-verification-zk/noir/src/: main.nr
arithmetic/: README.md
arithmetic/cairo/: .tool-versions
arithmetic/noir/src/: main.nr
cairo/: README.md  Scarb.toml
cairo/src/: lib.cairo
halo2/: Cargo.toml  README.md
halo2/src/: lib.rs
md/: age_verification_zk_circuit.md  zk_preliminaries.md
noir/: Nargo.toml  Prover.toml  README.md  Verifier.toml
