[package]
name = "halo2_zk_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { version = "0.3", features = ["dev-graph"] }
halo2_gadgets = "0.3"
pasta_curves = "0.5"
ff = "0.13"
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["plotters"]
dev-graph = ["halo2_proofs/dev-graph", "plotters", "tabbycat"] 